送信者の名前をいれられるようにした

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <h1>チャット2021</h1>
     <ul id="chats">
     </ul>
+    <form id="nameForm">
+      <input id="userName" autocomplete="off" placeholder="表示名" /><button>参加</button>
+    </form>
     <form id="form">
       <input id="msg" autocomplete="off" /> <button>送信</button>
     </form>
