吹き出しっぽい見た目にした

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <h1>チャット2021</h1>
-    <ul id="chats">
-    </ul>
+    <dl id="chats"></dl>
     <form id="nameForm">
       <input id="userName" autocomplete="off" placeholder="表示名" /><button>参加</button>
     </form>
